--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     Hello there, awesome person! 
       <h1> I am learning HTML </h1>
+      <img src="https://avatars3.githubusercontent.com/u/73717776?v=4">
   </body>
 
 </html>
