add unordered list

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
 
   <body>
     Hello there, awesome person! 
-      <h1> I am learning HTML </h1>
+      
       <img src="https://avatars3.githubusercontent.com/u/73717776?v=4">
+      <h1> I am learning HTML, my favorite sites are: </h1>
+      <ol>
+            <li>W3 school</li>
+            <li>Freecodecamp</li>
+            <li>Codecademy</li>
+      </ol>
+        
   </body>
 
 </html>
