--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <img src="https://avatars3.githubusercontent.com/u/73717776?v=4">
       <h1> I am learning HTML, my favorite sites are: </h1>
       <ol>
-            <li>W3 school</li>
-            <li>Freecodecamp</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
+            <li><a href="https://www.freecodecamp.org>Freecodecamp</li>
             <li>Codecademy</li>
       </ol>
         
