add link to unordered list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1> I am learning HTML, my favorite sites are: </h1>
       <ol>
             <li><a href="https://github.com">This is a link to GitHub!</a></li>
-            <li><a href="https://www.freecodecamp.org>Freecodecamp</li>
+            <li><a href="https://www.freecodecamp.org/learn/">Freecodecamp link</a></li>
             <li>Codecademy</li>
       </ol>
         
