--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     Hello there, awesome person! 
       
     <img src="https://avatars3.githubusercontent.com/u/73717776?v=4">
-      <h1> I am learning HTML, my favorite sites are: </h1>
+      <h1> I am learning HTML. </h1>
+      <p> my favorite sites are:</p>
       <ol>
             <li><a href="https://github.com">This is a link to GitHub!</a></li>
             <li><a href="https://www.freecodecamp.org/learn/">Freecodecamp link</a></li>
