--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       
     <img src="https://avatars3.githubusercontent.com/u/73717776?v=4">
       <h1> I am learning HTML. </h1>
-      <p> my favorite sites are:</p>
+       my favorite sites are: <br>
       <ol>
             <li><a href="https://github.com">This is a link to GitHub!</a></li>
             <li><a href="https://www.freecodecamp.org/learn/">Freecodecamp link</a></li>
