--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       
     <img src="https://avatars3.githubusercontent.com/u/73717776?v=4">
       <h1> I am learning HTML. </h1>
-       my favorite sites are: <br>
-      <ol>
+       my favorite sites are:
+      <ul>
             <li><a href="https://github.com">This is a link to GitHub!</a></li>
             <li><a href="https://www.freecodecamp.org/learn/">Freecodecamp link</a></li>
             <li>Codecademy</li>
-      </ol>
+      </ul>
         
   </body>
 
